@startuml Groepnr 22
skinparam classAttributeIconSize 0
title Groep 22

interface IBibItem {
    +ID: string
    +Ouder: IBibItem
    +VoegToe(bibItem: IBibItem):void
    +Verwijder(bibItem: IBibItem):void
    +Zoek(id: string): IBibItem
    +ZoekTrefwoord(trefwoord: string): ISet<IBibItem>
    +VerplaatsNaar(bibItem: IBibItem):void
    +Toon(insprong:int): string
}

together {
    abstract ABibItem{
        +Id: string
        +Ouder: IBibItem
        +VoegToe(bibItem: IBibItem):void
        +Verwijder(bibItem: IBibItem):void
        +Zoek(id: string): IBibItem
        +ZoekTrefWoord(trefwoord: string): ISet<IbibItem>
        +VerplaatsNaar(bibItem: IBibItem): void
        +Toon(insprong:int): string
        #VoldoetAanTrefwoord(woord: string): bool
    }
    note left: Abstracte klasse voor componenten
    note "Componenten" as n1
    Boek..n1
    class Boek{
        +Titel: string
        +Auteur: string
        +Uitgeverij: string
        +Jaartal: int
        +Toon(insprong:int): string
        #VoldoetAanTrefwoord(woord: string): bool
    }
    Artikel..n1
    class Artikel{
        +Titel: string
        +Auteur: string
        +Toon(insprong:int): string
        #VoldoetAanTrefwoord(woord: string): bool
    }
}

together {
    abstract ABibItemVerzameling{
        #Items: ICollection<IBibItem>
        +VoegToe(bibItem: IBibItem): void
        +Verwijder(bibItem: IBibItem): void
        +Zoek(id: string): IBibItem
        +ZoekTrefWoord(trefwoord: string): ISet<IbibItem>
        #ToonKinderen(insprong: int) : string
    }
    note top: Abstracte klasse voor compositen
    
    note "Compositen" as n2
    Tijdschrift...n2
    class Tijdschrift{
        +Titel: string
        +Uitgeverij: string
        +Datum: DateTime
        +Toon(insprong:int): string
        +VoegToe(bibItem:IBibItem):void
        +ZoekTrefWoord(trefwoord:string): ISet<IBibItem>
    }
    together {
        Afdeling...n2
        class Afdeling{
            +Naam: string
            +Toon(insprong:int): string
        }
        
        
        class Sorteer{
            +Compare(x: IBibItem, y: IBibItem): int
        }
    }
}

IBibItem <|.down. ABibItem
ABibItemVerzameling::Items o-up- "*"IBibItem
ABibItem <|-right- ABibItemVerzameling
ABibItem <|-- Boek
ABibItem <|-- Artikel
ABibItemVerzameling <|-- Tijdschrift
ABibItemVerzameling <|-- Afdeling
Sorteer <.up. Afdeling
@enduml